<resources>
    <string name="app_name">MLVB Live</string>
    <string name="app_btn_ok">Done</string>
    <string name="app_item_live_show">Show Live</string>
    <string name="app_item_live_shopping">Shopping Live</string>
    <string name="app_title_share_log">Share Logs</string>
    <string name="app_dialog_log_out">Are you sure you want to log out?</string>
    <string name="app_dialog_exit_app">Are you sure you want to exit?</string>
    <string name="app_tv_live_show_tips">Audio call still available with 70% packet loss</string>
    <string name="app_tv_live_shopping_tips">Video call still available with 50% packet loss</string>
    <string name="app_confirm">Done</string>
    <string name="app_tips_user_name">Chinese characters, letters, numbers and underscores, 2 - 20 words</string>
    <string name="app_version">Application Version</string>
    <string name="app_sdk_version">SDK Version</string>
    <string name="app_toast_set_username">Please enter a nickname</string>
    <string name="app_input_nickname_hint">Please enter a nickname</string>
    <string name="app_modify_nickname">Change Your Nickname</string>
    <string name="app_toast_success_to_set_username">Successfully</string>
    <string name="app_privacy_statement">Privacy</string>
    <string name="app_about">About</string>
    <string name="app_statement">Disclaimer</string>
    <string name="app_toast_failed_to_set_username">Failed: %s</string>
    <string name="app_my">Me</string>
    <string name="app_main_page">Home</string>
    <string name="app_login_out">Log out</string>
    <string name="app_personal_center">Me</string>
    <string name="app_btn_confirm">Confirm</string>
    <string name="app_btn_cancel">Wait a bit</string>
    <string name="app_user_agreement">Terms of Use</string>
    <string name="app_statement_detail">MLVB Live (this app) is a tryout app, whose copyright is owned by Tencent Cloud. This app is for tryout only and must not be used commercially. In accordance with relevant regulations, this app forbids pornographic, abusive, terrorism, and politically sensitive content. All audio/video interactions are recorded and archived.</string>
    <string name="app_logoff_account_title">Delete Account</string>
    <string name="app_logoff_account_ok">Account deleted</string>
    <string name="app_logoff_hint">You can no longer use this account after deletion,Its data will also be deleted and cannot be retrieved.</string>
    <string name="app_logoff_cur_account">Account: %s</string>
    <string name="app_logoff_btn_text">Delete</string>
    <string name="app_logoff_confirm">Are you sure you want to delete this account?</string>
    <string name="app_find">Discover</string>
    <string name="app_create_room_limit">The cloud communication account you are currently using has not activated the audio and video chat room function, and the number of chat rooms created exceeds the limit, please go to the Tencent Cloud official website to open [IM audio and video chat rooms]：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="app_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="app_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="app_toast_obtain_list_failed">Component failed to get list:%s</string>
    <string name="app_audience_members">%1$d People are watching</string>
    <string name="app_switch_trtc_mode">Switch to TRTC mode</string>
    <string name="app_switch_cdn_mode">Switch to CDN mode</string>
    <string name="app_ok">OK</string>
    <string name="app_warning_switched_mode">The switch is successful. It takes effect after killing the process and restarting</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_request_pk">Request PK</string>
    <string name="app_reject">Reject</string>
    <string name="app_accept">Accept</string>
    <string name="app_request_link">Request Link To You</string>
    <string name="app_close_room_tip">The live broadcast is in progress, are you sure to leave?</string>
    <string name="app_wait">hold on</string>
    <string name="app_me_ok">Sure</string>
    <string name="app_pk_invite">PK invite</string>
    <string name="app_anchor">Anchor</string>
    <string name="app_room_name">Room name</string>
    <string name="app_invited">Invite</string>
    <string name="app_more_function_please_wait">More features, stay tuned</string>
    <string name="app_loading">Loading…</string>
    <string name="app_user_show_live_room">\'s live room</string>
    <string name="app_room_id">Room Id:</string>
    <string name="app_anchor_room_close">The anchor room is closed</string>
    <string name="app_anchor_reject_request">The anchor declined the request</string>
    <string name="app_anchor_busy">Anchor busy</string>
    <string name="app_join_group_fail">Failed to join the group</string>
    <string name="app_link_request_timeout">The mic request timed out</string>
    <string name="app_pk_request_timeout">PK request timed out</string>
    <string name="app_busy_not_pk">Busy line, unable to initiate PK</string>
    <string name="app_hour_rank">Hour Rank</string>
    <string name="app_more_live">More Live</string>
    <string name="app_popularity_list">Popularity list</string>
    <string name="app_follow">Follow</string>
    <string name="app_already_followed">Followed</string>
    <string name="app_text_top_100">TOP 100</string>
    <string name="app_online_audience">Online Audience</string>
    <string name="app_audience_information">Audience Information</string>
    <string name="app_recommend">Recommend</string>
    <string name="app_show_live_anchor_exit">The anchor has left</string>
    <string name="app_fans">Fans</string>
    <string name="app_follow_success">Followed</string>
    <string name="app_unfollow_success">UnFollow success</string>
    <string name="app_show_live_link_mic_exit">Link-Mic is in progress, are you sure to leave?</string>
    <string name="app_working">Running</string>
    <string name="app_show_live_anchor_select_photo">Select photo</string>
    <string name="app_show_live_anchor_photo_library">Photo library</string>
    <string name="app_show_live_anchor_camera">Camera</string>
    <string name="app_input_room_id_hint">Enter a room id</string>
    <string name="app_enter_room">Enter Room</string>
    <string name="app_welcome_tips">Welcome to Tencent\nReal-Time Communication</string>
    <string name="app_build_background_service">&#160;Build background services&#160;</string>
    <string name="app_build_background_tips">" You can only experience some functions without configuring background services. If you want to experience all functions, please"</string>
    <string name="app_finished_configuring">I have finished configuring</string>
    <string name="app_not_configured_yet">Not configured yet</string>
    <string name="app_tools">Tools</string>
    <string name="app_switch_camera">Switch Camera</string>
    <string name="app_create_room">Create Room</string>
    <string name="app_description_of_room">Description of the live room</string>
</resources>
