<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_confirm_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_anchor_camera"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/app_show_live_anchor_camera"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_font_color" />

        <TextView
            android:id="@+id/tv_anchor_photo_library"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/app_show_live_anchor_photo_library"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/app_transparent" />

    <TextView
        android:id="@+id/tv_anchor_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_bg_confirm_dialog"
        android:gravity="center"
        android:text="@string/app_cancel"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>