<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_navigation_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="114dp"
        android:text="@string/app_welcome_tips"
        android:textColor="@color/app_color_white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_serverless_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/app_color_main_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_normal_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_normal_login"
        app:layout_constraintStart_toStartOf="@+id/btn_normal_login"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_without_server_login"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/login_bg_button"
        android:text="@string/app_not_configured_yet"
        android:textColor="@color/login_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_normal_login"
        app:layout_constraintStart_toStartOf="@+id/btn_normal_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_normal_login" />

    <Button
        android:id="@+id/btn_normal_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/login_bg_button"
        android:text="@string/app_finished_configuring"
        android:textColor="@color/login_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />
</androidx.constraintlayout.widget.ConstraintLayout>