<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_color_main_bg"
    android:orientation="vertical">

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_my_info_page_bg"
        android:layout_width="match_parent"
        android:layout_height="243dp" />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_marginTop="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_personal_center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/app_my_info_content_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        android:background="@drawable/app_my_info_triangle_right_bg" />

    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        android:background="@drawable/app_my_info_triangle_left_bg" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/rl_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/app_ic_head"
        android:layout_marginTop="58dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/tv_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_show_name"
        android:gravity="center"
        android:paddingLeft="20dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="10dp"
        android:textColor="@color/app_color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="nickname" />


    <ImageView
        android:id="@+id/img_show_name"
        app:layout_constraintLeft_toRightOf="@id/tv_show_name"
        app:layout_constraintTop_toTopOf="@id/tv_show_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_show_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constrainedWidth="true"
        android:layout_marginRight="20dp"
        android:src="@drawable/app_ic_edit"
        android:layout_marginLeft="4dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/tv_userid"
        app:layout_constraintTop_toBottomOf="@id/tv_show_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_show_name"
        app:layout_constraintRight_toRightOf="@id/img_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_horizontal"
        tools:text="ID:264738"
        android:textColor="#999999"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_privacy_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:background="@drawable/app_ic_privacy_statement"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_privacy_statement"
        app:layout_constraintTop_toBottomOf="@id/tv_userid"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="84dp"
        android:layout_marginTop="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_privacy_statement"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_user_agreement"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="84dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_user_agreement"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_user_agreement"
        app:layout_constraintBottom_toBottomOf="@id/tv_user_agreement"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="40dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_user_agreement"
        app:layout_constraintBottom_toBottomOf="@id/tv_user_agreement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:background="@drawable/app_uer_agreement"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_privacy_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_privacy_statement"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="40dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:background="@drawable/app_ic_statement"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_statement"
        app:layout_constraintTop_toBottomOf="@id/tv_user_agreement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="84dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_statement"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_statement"
        app:layout_constraintBottom_toBottomOf="@id/tv_statement"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="40dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_about"
        app:layout_constraintBottom_toBottomOf="@id/tv_about"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:background="@drawable/app_ic_about"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_about"
        app:layout_constraintTop_toBottomOf="@id/tv_statement"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="84dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_about"
        android:textColor="@color/app_color_main_text"
        android:textSize="16sp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/tv_about"
        app:layout_constraintBottom_toBottomOf="@id/tv_about"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_ic_details"
        android:layout_marginRight="40dp"
        android:layout_width="16dp"
        android:layout_height="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
